--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint:prettier": "prettier --check .",
-    "lint": "yarn lint:js && yarn lint:prettier",
-    "lintfix": "prettier --write --list-different . && yarn lint:js --fix",
+    "lint": "yarn lint:js",
+    "lintfix": "yarn lint:js --fix",
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.{js,vue}": "eslint --cache",
-    "*.**": "prettier --check --ignore-unknown"
+    "*.{js,vue}": "eslint --cache"
   },
   "dependencies": {
     "core-js": "^3.19.3",
@@ -27,10 +25,12 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
+    "@builder.io/partytown": "^0.5.1",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "copy-webpack-plugin": "^6.3.2",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
